# flame-alarm-system

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/HTTP_MY/: CMakeLists.txt  HTTP_weather.c  HTTP_weather.h
components/LCD/: LCD_init.h
components/LVGL_MY/: CMakeLists.txt  LVGL_init_my.c  LVGL_init_my.h  gb2312_16.c  lv_port_indev.c  lv_port_indev.h  lvgl_demo_ui.c  lvgl_demo_ui.h
components/UART_MY/: UART_init_my.c  UART_init_my.h
components/WiFi/: CMakeLists.txt  WiFi_my.c  WiFi_my.h
components/beep/: BEEP.c  BEEP.h
components/button_MY/: CMakeLists.txt  button_my.c  button_my.h
components/mq2/: CMakeLists.txt  bsp_mq2.c  bsp_mq2.h
components/sntp_set_time/: CMakeLists.txt  sntp_set_time.c  sntp_set_time.h
main/: CMakeLists.txt  app_main.c  idf_component.yml
